Add vue to application as a proper frontend framework

--- a/index.html
+++ b/index.html
@@ -3,24 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>weebsync</title>
+      <link rel="stylesheet" href="./src/renderer/main.scss">
     <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
-    <link rel="stylesheet" href="./build/main.css">
   </head>
   <body>
-  <div class="titlebar">
-    <button class="titlebar__button" id="minimize-to-tray-button">Minimize to Tray</button>
-    <button class="titlebar__button" id="minimize-button">Minimize</button>
-    <button class="titlebar__button" id="exit-button">Exit</button>
-  </div>
-  <div id="log">
-
-  </div>
-  <div id="bar">
-
-  </div>
-  <script src="./build/renderer.js"></script>
+    <div id="app"></div>
+  <script type="module" src="./src/renderer/index.ts"></script>
   </body>
 </html>
