make application look better overall

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <title>weebsync</title>
       <link rel="stylesheet" href="./src/renderer/main.scss">
+      <link rel="stylesheet" href="./node_modules/vuetify/dist/vuetify.min.css">
+      <link rel="stylesheet" href="./node_modules/vue2-perfect-scrollbar/dist/vue2-perfect-scrollbar.css">
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
+      content="script-src 'self'; style-src 'self' 'nonce-dQw4w9WgXcQ'"
     />
   </head>
   <body>
