--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="./node_modules/vue2-perfect-scrollbar/dist/vue2-perfect-scrollbar.css">
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src 'self'; style-src 'self' 'nonce-dQw4w9WgXcQ'"
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'nonce-dQw4w9WgXcQ'"
     />
   </head>
   <body>
