add docker container build

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>weebsync</title>
       <link rel="stylesheet" href="src/main.scss">
+      <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
   </head>
   <body>
     <div id="app"></div>
